--- a/styles/style.css
+++ b/styles/style.css
@@ -118,13 +118,13 @@ header nav{
         max-width: 478px;
 }
 .web-skill-text-tittle{
-        color: rgba(13, 19, 33, 0.7);
         font-family: mono;
         font-size: 24px;
         font-weight: 100;
         line-height: 36px;
         text-align: left;
         margin-bottom: 16px;
+        color: rgba(13, 19, 33, 0.7);
 }
 .web-skill-text-description{
         color: rgb(13, 19, 33);
@@ -169,4 +169,21 @@ header nav{
         text-align: center;
         opacity: 0.7;
         margin-bottom: 48px;
+}
+.target-tittle{
+        font-family: mono;
+        font-size: 24px;
+        font-weight: 100;
+        line-height: 36px;
+        text-align: left;
+        color: rgba(13, 19, 33, 0.7);
+}
+.target-description{
+        font-family: mono;
+        font-size: 16px;
+        font-weight: 100;
+        line-height: 26px;
+        text-align: left;
+        opacity: 0.7;
+        color: rgb(13, 19, 33);
 }
